* Tag plugins according to type.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ ikiwiki (1.12) unstable; urgency=low
     However, to avoid inlining loops etc, don't expand inline directives in
     inlined pages.
   * fortune plugin (trivial)
+  * Tag plugins according to type.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 17:12:56 -0400
 
