--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -10,7 +10,7 @@ or the equivalent `add_plugins` line in [[ikiwiki.setup]].
 
 Add all plugins here. Or add ideas to the [[todo|todo/plugin]] page.
 
-[[inline pages="plugins/* !plugins/write !*/Discussion" archive="yes" rootpage="plugins/contrib" show="60"]]
+[[inline pages="plugins/* !plugins/type/* !plugins/write !*/Discussion" archive="yes" rootpage="plugins/contrib" show="60"]]
 
 # Installing third party plugins
 
