--- a/doc/plugins/brokenlinks.mdwn
+++ b/doc/plugins/brokenlinks.mdwn
@@ -9,3 +9,5 @@ This plugin is included in ikiwiki, but is not enabled by default.
 If it is turned on, here's a list of broken links on this wiki:
 
 [[brokenlinks ]]
+
+[[tag plugins/type/link plugins/type/meta]]
