--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -14,3 +14,5 @@ display be written in haiku.
 
 You need to have the Coy module installed for this plugin to do anything
 interesting. That does all the heavy lifting.
+
+[[tag plugins/type/fun]]
