--- a/doc/plugins/html.mdwn
+++ b/doc/plugins/html.mdwn
@@ -6,3 +6,5 @@ sanitised like any other page. You can also use standard [[WikiLink]]s etc
 in the html pages.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+
+[[tag plugins/type/html plugins/type/format]]
