--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -3,3 +3,5 @@ emitted by ikiwiki. Besides being nicely formatted, this helps ensure that
 even if users enter suboptimal html, your wiki generates 100% valid html.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+
+[[tag plugins/type/html]]
