--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -2,3 +2,5 @@ Allows including one wiki page inside another, generating blogs and RSS
 feeds. See [[blog]] for details.
 
 This plugin is enabled by default.
+
+[[tag plugins/type/core]]
