--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -1,3 +1,5 @@
 This plugin, which is enabled by default, lets ikwiki convert files with
 names ending in ".mdwn" to html. It uses the [[markdown]] minimal markup
 language.
+
+[[tag plugins/type/format plugins/type/core]]
