--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -43,3 +43,5 @@ header.
 This plugin is included in ikiwiki, but it is not enabled by default. If
 it is enabled, the title of this page will say it is.
 [[meta title="meta plugin (enabled)"]]
+
+[[tag plugins/type/meta]]
