--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -12,3 +12,5 @@ This plugin is included in ikiwiki, but is not enabled by default.
 If it is turned on, here's a list of orphaned pages on this wiki:
 
 [[orphans ]]
+
+[[tag plugins/type/meta]]
