--- a/doc/plugins/pagecount.mdwn
+++ b/doc/plugins/pagecount.mdwn
@@ -9,3 +9,5 @@ This plugin is included in ikiwiki, but is not enabled by default.
 If it is turned on it can tell us that this wiki includes
 [[pagecount ]] pages, of which [[pagecount pages="*/Discussion"]] are
 discussion pages.
+
+[[tag plugins/type/meta]]
