--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -11,3 +11,5 @@ And here's how to create a table of all the pages on the wiki:
 	\[[pagestats style="table"]]
 
 This plugin is included in ikiwiki, but is not enabled by default.
+
+[[tag plugins/type/meta plugins/type/tags]]
