--- a/doc/plugins/polygen.mdwn
+++ b/doc/plugins/polygen.mdwn
@@ -24,3 +24,5 @@ Ikiwiki reviews:
 <li>[[polygen grammar="reviews"]]</li>
 <li>[[polygen grammar="reviews"]]</li>
 </ul>
+
+[[tag plugins/type/fun]]
