--- a/doc/plugins/smiley.mdwn
+++ b/doc/plugins/smiley.mdwn
@@ -4,3 +4,5 @@ which serves as both configuration for the plugin and a list of available
 smileys.
 
 This plugin is included in ikiwiki, but is not enabled by default. :-)
+
+[[tag plugins/type/format]]
