--- a/doc/plugins/wikitext.mdwn
+++ b/doc/plugins/wikitext.mdwn
@@ -20,3 +20,5 @@ space. Any indented text without either marking is code, handled literally.
 You can nest lists.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+
+[[tag plugins/type/format]]
