--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -5,3 +5,5 @@ to be the name of some other page on the wiki, and so become a link.
 This plugin is included in ikiwiki, but is not enabled by default.
 
 If this plugin is enabled, here is a link: SandBox
+
+[[tag plugins/type/link]]
