--- a/doc/plugins/brokenlinks.mdwn
+++ b/doc/plugins/brokenlinks.mdwn
@@ -10,4 +10,4 @@ If it is turned on, here's a list of broken links on this wiki:
 
 [[brokenlinks ]]
 
-[[tag plugins/type/link plugins/type/meta]]
+[[tag type/link type/meta]]
