--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -6,4 +6,4 @@ This plugin is included in ikiwiki, but is not enabled by default.
 
 If this plugin is enabled, here is a link: SandBox
 
-[[tag plugins/type/link]]
+[[tag type/link]]
