--- a/doc/plugins/html.mdwn
+++ b/doc/plugins/html.mdwn
@@ -7,4 +7,4 @@ in the html pages.
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
-[[tag plugins/type/html plugins/type/format]]
+[[tag type/html type/format]]
