--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -4,4 +4,4 @@ even if users enter suboptimal html, your wiki generates 100% valid html.
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
-[[tag plugins/type/html]]
+[[tag type/html]]
