--- a/doc/plugins/pagecount.mdwn
+++ b/doc/plugins/pagecount.mdwn
@@ -10,4 +10,4 @@ If it is turned on it can tell us that this wiki includes
 [[pagecount ]] pages, of which [[pagecount pages="*/Discussion"]] are
 discussion pages.
 
-[[tag plugins/type/meta]]
+[[tag type/meta]]
