--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -12,4 +12,4 @@ And here's how to create a table of all the pages on the wiki:
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
-[[tag plugins/type/meta plugins/type/tags]]
+[[tag type/meta type/tags]]
