--- a/doc/plugins/smiley.mdwn
+++ b/doc/plugins/smiley.mdwn
@@ -5,4 +5,4 @@ smileys.
 
 This plugin is included in ikiwiki, but is not enabled by default. :-)
 
-[[tag plugins/type/format]]
+[[tag type/format]]
