--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -16,4 +16,4 @@ This plugin is included in ikiwiki, but is not enabled by default. If it is
 enabled, you'll see a note below that this page is tagged with the "tags"
 tag.
 
-[[tag plugins/type/tags plugins/type/link]]
+[[tag type/tags type/link]]
