--- a/doc/plugins/wikitext.mdwn
+++ b/doc/plugins/wikitext.mdwn
@@ -21,4 +21,4 @@ You can nest lists.
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
-[[tag plugins/type/format]]
+[[tag type/format]]
