--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -4,15 +4,23 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history.
 Instead it can use [[Subversion]] (or [[Git]]).
 
-* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. It's the best way to find out when there's a new version to [[Download]].
+* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
+  It's the best way to find out when there's a new version to [[Download]].
 
-* See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]] and [[bugs]] might also be of interest. Feel free to post your thoughts about ikiwiki to [[Discussion]].
+* See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]]
+  and [[bugs]] might also be of interest. Feel free to post your thoughts
+  about ikiwiki to [[Discussion]].
 
-* [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents the parameters and usage of the ikiwiki program. If you use ikiwiki, please add your wiki to [[IkiWikiUsers]].
+* [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
+  the parameters and usage of the ikiwiki program. If you use ikiwiki,
+  please add your wiki to [[IkiWikiUsers]].
 
-* [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
+* [[Security]] lists potential security problems. ikiwiki is still being
+  developed, and is being written with security as a priority, so don't
+  expect things to stay in this list for long.
 
-* Developers, please document any ikiwiki patches you have in the [[PatchQueue]].
+* Developers, please document any ikiwiki patches you have in the
+  [[PatchQueue]].
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
