--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -52,6 +52,10 @@ Some of ikiwiki's features:
   Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
   of some of the flexible ways that this can be used.
 
+  Ikiwiki can also [[plugin/aggregate]] external blogs, feeding them into
+  the wiki. This can be used to create a Planet type site that aggregates
+  interesting feeds.
+
 * [[tags]]
 
   You can tag pages and use these tags in various ways. Tags will show
