--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -4,7 +4,7 @@ Ikiwiki requires [[MarkDown]] be installed, and also uses the following
 perl modules if available: `CGI::Session` `CGI::FormBuilder` (version
 3.02.02 or newer) `HTML::Template` `Mail::SendMail` `Time::Duration`
 `Date::Parse` (libtimedate-perl), `HTML::Scrubber`, `RPC::XML`,
-`XML::Simple`
+`XML::Simple`, `XML::Feed`, `HTML::Parser`
 
 If you want to install from the tarball, you should make sure that the
 required perl modules are installed, then run:
