--- a/doc/plugins/search.mdwn
+++ b/doc/plugins/search.mdwn
@@ -4,3 +4,5 @@ full text search to ikiwiki, using the [[HyperEstraier]] engine.
 It's possible to configure HyperEstraier via one of ikiwiki's
 [[templates]], but for most users, no configuration should be needed aside
 from enabling the plugin.
+
+[[tag type/useful]]
