--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -26,6 +26,8 @@ It ships with some basic templates which can be customised:
   can read the [[HyperEstraier]] docs and configure it using this.
 * `blogpost.tmpl` - Used for a form to add a post to a blog (and a rss link)
 * `rsslink.tmpl` - Used to add a rss link if blogpost.tmpl is not used.
+* `aggregatepost.tmpl` - Used by the [[plugins/aggregate]] plugin to create
+  a page for a post.
 
 If you like, you can add these to further customise it:
 
