--- a/doc/todo/aggregation.mdwn
+++ b/doc/todo/aggregation.mdwn
@@ -1,1 +1,5 @@
 * Still need to support feed expiry.
+* Need to store page author metadata and include it in the rss feed.
+* Should store the real page title (capitalised) as metadats.
+  Only problem is titles that contain quotes need to be escaped somehow,
+  and I'll need to add support for that first.
