web commit by JonasSmedegaard: Corrected typo: imge -> image.

--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -38,6 +38,6 @@ Note that the format is important; each list item should start with the
 text that is turned into the smiley, escaped so that users can see what
 produces it, followed by a [[WikiLink]] to the image to display.
 
-/!\ Bear in mind that the link to the imge needs to be written in a way that
+/!\ Bear in mind that the link to the image needs to be written in a way that
 will work if it's copied to other pages on the wiki. So be sure to include the
 smileys directory in the path to the file.
