--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -71,6 +71,10 @@ These options control the mode that ikiwiki is operating in.
   If the aggregate plugin is enabled, this makes ikiwiki poll configured
   feeds and save new posts to the srcdir.
 
+  Note that to rebuild previously aggregated posts, use the --rebuild option
+  along with this one. --rebuild will also force feeds to be polled even if
+  they were polled recently.
+
 # CONFIG OPTIONS
 
 These options configure the wiki. Note that plugins can add additional
