--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -40,6 +40,9 @@ If the field is not treated specially (as the link and title fields are),
 the metadata will be written to the generated html page as a &lt;meta&gt;
 header.
 
+The field value is treated as HTML entity-escaped text, so you can include
+a quote in the text by writing `&quot;` and so on.
+
 This plugin is included in ikiwiki, but it is not enabled by default. If
 it is enabled, the title of this page will say it is.
 [[meta title="meta plugin (enabled)"]]
