* Title metadata of inlined pages now shows up in blogs, although not yet   in their rss feeds.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,10 @@ ikiwiki (1.13) UNRELEASED; urgency=low
   * Avoid outputting duplicate meta info.
   * Include title metadata on aggregated posts for capitalised and un-munged
     titles.
+  * Title metadata of inlined pages now shows up in blogs, although not yet
+    in their rss feeds.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 30 Jul 2006 18:17:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Jul 2006 19:22:11 -0400
 
 ikiwiki (1.12) unstable; urgency=low
 
