fix title metadata on blogs, reorg needed to do it, simplified tag some

--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -17,6 +17,7 @@ It ships with some basic templates which can be customised:
 * `passwordmail.tmpl` - Not a html template, this is used to
   generate the mail with the user's password in it.
 * `rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
+* `rssitem.tmpl` - Used for generating individual items on rss feeds.
 * `inlinepage.tmpl` - Used for adding a page inline in a blog
   page.
 * `inlinepagetitle.tmpl` - Used for listing a page inline in a blog
