--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,7 @@ ikiwiki (1.13) UNRELEASED; urgency=low
   * Avoid outputting duplicate meta info.
   * Include title metadata on aggregated posts for capitalised and un-munged
     titles.
-  * Title metadata of inlined pages now shows up in blogs, although not yet
-    in their rss feeds.
+  * Title metadata of inlined pages now shows up in blogs and rss feeds.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 30 Jul 2006 19:22:11 -0400
 
