--- a/doc/todo/aggregation.mdwn
+++ b/doc/todo/aggregation.mdwn
@@ -1,2 +1,5 @@
 * Still need to support feed expiry.
 * Need to store page author metadata and include it in the rss feed.
+* Some rss feeds contain relative links or relative urls to inline images,
+  which break when aggregated. Do I need to parse the html and make them
+  all absolute?
