* Fix issue with unicode filenames and updating the hyper estradier search   index. (Aka Please Please Please, let that be the last one.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,10 @@ ikiwiki (1.13) UNRELEASED; urgency=low
   * Include title metadata on aggregated posts for capitalised and un-munged
     titles.
   * Title metadata of inlined pages now shows up in blogs and rss feeds.
+  * Fix issue with unicode filenames and updating the hyper estradier search
+    index. (Aka Please Please Please, let that be the last one.)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 30 Jul 2006 19:22:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Jul 2006 21:18:16 -0400
 
 ikiwiki (1.12) unstable; urgency=low
 
