--- a/doc/todo/aggregation.mdwn
+++ b/doc/todo/aggregation.mdwn
@@ -1,5 +1,7 @@
 * Still need to support feed expiry.
 * Need to store page author metadata and include it in the rss feed.
+  Permalink to? Also, that stuff could be presented better in the html blog
+  view, also using the metadata.
 * Some rss feeds contain relative links or relative urls to inline images,
   which break when aggregated. Do I need to parse the html and make them
   all absolute?
