--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -6,4 +6,4 @@ This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
 
 # Full list of open bugs:
 
-[[inline pages="bugs/* !bugs/done !link(bugs/done) !*/Discussion" archive="yes"]]
+[[inline pages="bugs/* !bugs/done !link(bugs/done) !*/Discussion" archive="yes" rss="no"]]
