--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -6,4 +6,4 @@ Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 
 # Full list of open items:
 
-[[inline pages="todo/* !todo/done !link(todo/done) !*/Discussion" archive="yes"]]
+[[inline pages="todo/* !todo/done !link(todo/done) !*/Discussion" archive="yes" rss="no"]]
