--- a/basewiki/blog.mdwn
+++ b/basewiki/blog.mdwn
@@ -7,9 +7,13 @@ Any pages that match the specified [[GlobList]] (in the example, any
 [[SubPage]] of "blog") will be part of the blog, and the newest 10
 of them will appear in the page.
 
-The optional `rootpage` setting tells the wiki that new posts to this blog
+The optional `rootpage` parameter tells the wiki that new posts to this blog
 should default to being [[SubPage]]s of "blog", and enables a form at the
 top of the blog that can be used to add new items.
+
+There is also an optional `rss` parameter that can control whether an RSS
+feed is generated. The default is to generate an RSS feed, if the wiki is
+globally configured to do so, but you can set `rss=no` to disable this.
 
 If you want your blog to have an archive page listing every post ever made
 to it, you can accomplish that like this:
