* Renamed GlobLists to PageSpecs. * PageSpecs can now include nested parens, "and", and "or". This remains   backwards compatible to the old GlobList format. It's implemented by   treating the GlobList as a very limited microlanguage that is transformed   to perl code that does the matching. * The old GlobList format is deprecated, and I encourage users to switch to   using the new PageSpec format. Compatability with the old format will be   removed at some point, possibly by 2.0. * Wiki rebuild needed on upgrade to this version due to PageSpec change. * Add support for creation_month and creation_year to PageSpec.   Closes: #380680 * Changes to index file encoding.

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,19 @@
+ikiwiki (1.13) unstable; urgency=low
+
+  The GlobList format which was used for specifiying sets of pages, has been
+  replaced with a new PageSpec format. While GlobLists will continue to work,
+  that format is deprecated, and you are recommended to use PageSpecs from now
+  on, and also to change any GlobLists in your wiki to PageSpecs. 
+  
+  See the new PageSpec page for details.
+  
+  You will need to rebuild your wiki when upgrading to this version. If you
+  listed your wiki in /etc/ikiwiki/wikilist this will be done automatically
+  when the Debian package is upgraded. Or use ikiiki-mass-rebuild to force a
+  rebuild.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  1 Aug 2006 18:29:51 -0400
+
 ikiwiki (1.11) unstable; urgency=low
 
   Some changes to tags in this release, due to a new tag plugin. If you have
