--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -1,9 +1,9 @@
 This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
 
-[[inline pages="bugs/* !bugs/done !link(bugs/done) !*/Discussion" rootpage="bugs" show="30"]]
+[[inline pages="bugs/* and !bugs/done and !link(bugs/done) and !*/Discussion" rootpage="bugs" show="30"]]
 
 ----
 
 # Full list of open bugs:
 
-[[inline pages="bugs/* !bugs/done !link(bugs/done) !*/Discussion" archive="yes" rss="no"]]
+[[inline pages="bugs/* and !bugs/done and !link(bugs/done) and !*/Discussion" archive="yes" rss="no"]]
