--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -46,7 +46,7 @@ Some of ikiwiki's features:
 * [[blogging|blog]]
 
   You can turn any page in the wiki into a [[blog]]. Pages matching a
-  specified [[GlobList]] will be displayed as a weblog within the blog
+  specified [[PageSpec]] will be displayed as a weblog within the blog
   page. And an RSS feed can be generated to follow the blog.
 
   Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
