--- a/doc/patchqueue.mdwn
+++ b/doc/patchqueue.mdwn
@@ -5,5 +5,4 @@ Feel free to either copy the patch inline, or link to one elsewhere (or nag
 Joey to open up anonymous svn access to this wiki so you can check in the
 patches directly).
 
-[[inline pages="patchqueue/* !patchqueue/done !link(patchqueue/done) !*/Discussion" rootpage="patchqueue" show="30" archive="yes"]]
-
+[[inline pages="patchqueue/* and !patchqueue/done and !link(patchqueue/done) and !*/Discussion" rootpage="patchqueue" show="30" archive="yes"]]
