--- a/doc/todo/multiple_templates.mdwn
+++ b/doc/todo/multiple_templates.mdwn
@@ -2,7 +2,7 @@
 > file for some pages; blog pages would use a template different from the
 > home page, even if both are managed in the same repository, etc.
 
-Well, that would probably be fairly easy to add if it used globlists to
+Well, that would probably be fairly easy to add if it used pagespecs to
 specify which pages use the non-default template.
 
 Hmm, I think the pagetemplate hook should allow one to get close enough to
