--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -2,7 +2,7 @@ This is where annoucements of new releases, features, and other news is
 posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS
 feed.
 
-[[inline pages="news/* !*/Discussion" rootpage="news" show="30"]]
+[[inline pages="news/* and !*/Discussion" rootpage="news" show="30"]]
 
 By the way, some other pages with RSS feeds about ikiwiki include
 [[plugins]], [[TODO]] and [[bugs]].
