--- a/doc/plugins/brokenlinks.mdwn
+++ b/doc/plugins/brokenlinks.mdwn
@@ -2,7 +2,7 @@ This plugin generates a list of broken links on pages in the wiki. This is
 a useful way to find pages that still need to be written, or links that
 are written wrong.
 
-The optional parameter "pages" can be a [[GlobList]] specifying the pages
+The optional parameter "pages" can be a [[PageSpec]] specifying the pages
 to search for broken links, default is search them all.
 
 This plugin is included in ikiwiki, but is not enabled by default.
