--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -3,7 +3,7 @@ This plugin allows tagging pages. List tags as follows:
 	\[[tag tech life linux]]
 
 The tags work the same as if you had put a (hidden) [[WikiLink]] on the page
-for each tag, so you can use a [[GlobList]] to link to all pages that are
+for each tag, so you can use a [[PageSpec]] to link to all pages that are
 tagged with a given tag, for example. The tags will also show up on blog
 entries and at the bottom of the tagged pages, as well as in rss feeds.
 
