--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,11 +1,10 @@
 ikiwiki (1.13) unstable; urgency=low
 
   The GlobList format which was used for specifiying sets of pages, has been
-  replaced with a new PageSpec format. While GlobLists will continue to work,
-  that format is deprecated, and you are recommended to use PageSpecs from now
-  on, and also to change any GlobLists in your wiki to PageSpecs. 
-  
-  See the new PageSpec page for details.
+  replaced with a new, more expressive PageSpec format. While GlobLists will
+  continue to work, that format is deprecated, and you are encouraged to use
+  PageSpecs from now on, and also to change any GlobLists in your wiki to
+  PageSpecs. See the new PageSpec page for details.
   
   You will need to rebuild your wiki when upgrading to this version. If you
   listed your wiki in /etc/ikiwiki/wikilist this will be done automatically
