--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.13) UNRELEASED; urgency=low
+ikiwiki (1.13) unstable; urgency=low
 
   * ikiwiki can now download and aggregate feeds with its new aggregate
     plugin, so it's possible to implement a Planet using ikiwiki!
@@ -37,7 +37,7 @@ ikiwiki (1.13) UNRELEASED; urgency=low
     Closes: #380680
   * Changes to index file encoding.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  1 Aug 2006 16:00:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  1 Aug 2006 21:21:19 -0400
 
 ikiwiki (1.12) unstable; urgency=low
 
