--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.14) UNRELEASED; urgency=low
+
+  * Memoize pagespec translation, this speeds up a build of the ikiwiki tree
+    by 10% or so.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  1 Aug 2006 23:35:13 -0400
+
 ikiwiki (1.13) unstable; urgency=low
 
   * ikiwiki can now download and aggregate feeds with its new aggregate
