--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -14,6 +14,8 @@ Sites that are using ikiwiki include:
 * Andre Luis Lopes's [personal website](http://www.andrelop.org/). Brazilian Portuguese only.
 * Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
+* Anna's [nature features](http://kitenet.net/~anna/nature-feature/)
+* [Planet Debian upstram](http://updo.kitenet.net/)
 
 Please feel free to add your own ikiwiki site!
 
