--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -1,5 +1,7 @@
 This plugin allows inserting a randomly generated haiku into a wiki page.
-Just type \\[[haiku hint="argument"]].
+Just type:
+
+	\[[haiku hint="argument"]]
 
 [[haiku hint="argument test"]]
 
