--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ikiwiki (1.15) UNRELEASED; urgency=low
+ikiwiki (1.15) unstable; urgency=low
 
   * Remove CDPATH and other env vars perl taint checking doesn't like.
     Closes: #381279
   * Added created_before and created_after PageSpec limits.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 12:52:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 13:00:57 -0400
 
 ikiwiki (1.14) unstable; urgency=low
 
