web commit by amaya: small typo

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -15,7 +15,7 @@ Sites that are using ikiwiki include:
 * Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog).
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
 * Anna's [nature features](http://kitenet.net/~anna/nature-feature/)
-* [Planet Debian upstram](http://updo.kitenet.net/)
+* [Planet Debian upstream](http://updo.kitenet.net/)
 
 Please feel free to add your own ikiwiki site!
 
