* Make aggregator save permalinks and author name to pages as metadata. * Add permalink and author support to meta plugin, affecting RSS feeds   and blog pages. * Change titlepage() to encode utf-8 alnum characters. This is necessary   to avoid UTF-8 creeping into filenames in urls. (There are still   some other ways that it can get in.)

--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -36,6 +36,10 @@ You can use any field names you like, but here are some predefined ones:
 
   Specifies the author of a page.
 
+* permalink
+
+  Specifies the permalink to the page, for use in RSS feeds.
+
 If the field is not treated specially (as the link and title fields are),
 the metadata will be written to the generated html page as a &lt;meta&gt;
 header.
