--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,14 @@ ikiwiki (1.16) UNRELEASED; urgency=low
     the current support is a crude hack due to limitations of XML::Feed:
     xml:base is not supported, neither is Content-Location. And of course,
     relative links in RSS feeds are ill-undefined..
+  * Make aggregator save permalinks and author name to pages as metadata.
+  * Add permalink and author support to meta plugin, affecting RSS feeds
+    and blog pages.
+  * Change titlepage() to encode utf-8 alnum characters. This is necessary
+    to avoid UTF-8 creeping into filenames in urls. (There are still
+    some other ways that it can get in.)
 
- -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 17:29:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Aug 2006 18:45:36 -0400
 
 ikiwiki (1.15) unstable; urgency=low
 
